@@ -757,6 +757,9 @@ tourism_time_scale_percent = 100
 ; On the first turn of a hotseat game, all human players will be given diplomatic contact with each other.
 introduce_all_human_players_at_start_of_hotseat_game = false
 
+; Allows units to be unloaded from an army. The army type must have the "unload" ability set in the editor.
+allow_unload_from_army = false
+
 [==================]
 [=== AESTHETICS ===]
 [==================]
